--- a/Personal Website/index.html
+++ b/Personal Website/index.html
@@ -67,8 +67,7 @@
                 <div class="about">
                     <div class="about-text">
                         <h1>I'm Nicholas Christian Dianto</h1>
-                        <p>I'm a Web Engineer who focused on Front-End Part like HTML, CSS, and Javascript and currently
-                            focused on learning the Back-End of Web Engineering and Framework Test</p>
+                        <p>Test</p>
                         <h2 class="exprience-header">Exprience</h2>
                         <div class="codeexprience">
                             <p class="code">Javascript <span>Basic </span><svg class="exprience-icon"
